[package]
name = "lunner"
version = "0.1.0"
authors = ["Justin Carter <justin@misthos.io>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
env_logger="0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros"] }
tokio-postgres = "0.7.0"
